<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_TcLogging" Id="{292e637e-4d7a-4db7-abeb-2b010315ee0d}" SpecialFunc="None">
    <Declaration><![CDATA[// Provide logging 
FUNCTION_BLOCK FB_TcLogging IMPLEMENTS I_Logging
VAR_INPUT
	eLogLevel:				E_LogLevel:= E_LogLevel.Verbose;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	iLogging:				I_Logging;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="M_Attach" Id="{3f88776c-53a0-4184-9466-1323781c8a3f}">
      <Declaration><![CDATA[METHOD PUBLIC M_Attach : BOOL
VAR_INPUT
	iLogging:				I_Logging;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF THIS^.iLogging = 0 THEN
	THIS^.iLogging:= iLogging;
	M_Attach:= TRUE;
ELSIF THIS^.iLogging = iLogging THEN
	// already inside
	M_Attach:= TRUE;
	RETURN;
ELSE
	// redirect to next logging function block
	THIS^.iLogging.M_Attach(iLogging);
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Log" Id="{fbcda6eb-ae6d-4cd1-8b07-21ee1ce3950e}">
      <Declaration><![CDATA[METHOD PUBLIC M_Log : BOOL
VAR_INPUT
	stMessage:			ST_Message;
END_VAR
VAR
	fbMsg:				FB_TcMessage; 
	fbSourceInfo:		FB_TcSourceInfo;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF THIS^.eLogLevel > eLogLevel THEN
	M_Log:= TRUE;
	RETURN;
END_IF

IF stMessage.bActive THEN

	fbSourceInfo.Clear();
	fbSourceInfo.sName:= stMessage.sSource;
	
	CASE stMessage.eLogLevel OF
		E_LogLevel.Verbose:
			fbMsg.CreateEx(TC_EVENTS.TcLogging.Verbose, fbSourceInfo); 	
	
		E_LogLevel.Info:
			fbMsg.CreateEx(TC_EVENTS.TcLogging.Info, fbSourceInfo); 
			
		E_LogLevel.Warning:		
			fbMsg.CreateEx(TC_EVENTS.TcLogging.Warning, fbSourceInfo); 
			
		E_LogLevel.Error:
			fbMsg.CreateEx(TC_EVENTS.TcLogging.Error, fbSourceInfo); 
			
		E_LogLevel.Critical:
			fbMsg.CreateEx(TC_EVENTS.TcLogging.Critical, fbSourceInfo); 
			
	END_CASE
	
	fbMsg.ipArguments.Clear().AddString(stMessage.sDefault);
	
	fbMsg.Send(stMessage.nTimestamp);

END_IF]]></ST>
      </Implementation>
    </Method>
    <Property Name="P_LogLevel" Id="{20284c4a-b49d-4717-b587-44632cbeee93}">
      <Declaration><![CDATA[PROPERTY PUBLIC P_LogLevel : E_LogLevel]]></Declaration>
      <Get Name="Get" Id="{2ddf3a03-42dc-4c50-93f3-3a68b5c79508}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_LogLevel:= eLogLevel;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{02addeea-bac2-4187-adee-a3a4ebdbd958}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[eLogLevel:= P_LogLevel;
]]></ST>
        </Implementation>
      </Set>
    </Property>
  </POU>
</TcPlcObject>